# persichetti

./: Cargo.toml  readme.md
src/: chord.rs  lib.rs  primitives.rs  serialism.rs
tests/: chord.rs  notes_and_intervals.rs  pitched_notes_compound_intervals.rs
