[package]
name = "persichetti"
version = "0.1.2"
authors = ["Kyle Silver"]
edition = "2018"
license = "MIT"
description = "Foundational elements of western classical harmony, and tools to analyze them"
repository = "https://github.com/kyle-silver/persichetti"
readme = "readme.md"
keywords = ["music", "music-theory", "harmony", "melody", "chord"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = "0.99.13"
itertools = "0.10.0"
lazy_static = "1.4"
regex = "1"